--- a/firebase.json
+++ b/firebase.json
@@ -3,12 +3,12 @@
     "public": "public",
     "ignore": [
       "firebase.json",
-      "/.*",
-      "/node_modules/"
+      "**/.*",
+      "**/node_modules/**"
     ],
     "rewrites": [
       {
-        "source": "",
+        "source": "**",
         "destination": "/index.html"
       }
     ]
